Fix crash when saving the image with trimming

We should avoid concurrent write access to paint devices...

BUG:437626